# Infrastructure/rest/src/main/java/com/school/infrastructure/rest/controller/UserManagement.java
@@ -2,26 +2,25 @@ package com.school.infrastructure.rest.controller;
 
 import com.school.domain.usecase.GetUsersUseCase;
 import com.school.infrastructure.rest.api.UserApi;
+import com.school.infrastructure.rest.dto.UserDto;
 import com.school.infrastructure.rest.mapper.UserRestMapper;
-import com.school.infrastructure.rest.model.User;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Component;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
-@Component
 @RequiredArgsConstructor
-public class GetUsersDelegate implements UserApi {
+@RestController
+@RequestMapping("/user")
+public class UserManagement implements UserApi {
   private final UserRestMapper userRestMapper;
   private final GetUsersUseCase getUsersUseCase;
 
   @Override
-  public ResponseEntity<User> _getUserById(Long userId) {
-    return null;
-  }
+  public ResponseEntity<List<UserDto>> getUsers() {
+    // Implementación
 
-  @Override
-  public ResponseEntity<List<User>> _getUsers() {
     return null;
   }
 }
