# Infrastructure/rest/src/main/spec/openapi.yml
@@ -3,12 +3,22 @@ info:
   title: API User
   version: "1.0"
 servers:
-  - url: https://localhost:8080
+  - url: http://localhost:8080/{basePath}/{version}
+    description: local dev url
+    variables:
+      basePath:
+        enum:
+          - 'api'
+        default: 'api'
+      version:
+        enum:
+          - 'v1'
+        default: 'v1'
 tags:
   - name: User
     description: Operaciones relacionadas con usuarios.
 paths:
-  /user:
+  '/user':
     get:
       tags:
         - User
